--- a/index.html
+++ b/index.html
@@ -54,15 +54,12 @@
             </div>
             <div class="triangles"></div>
         </header>
-
         <section class="hero">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="content">
-                            <div class="tekst">
-                                <p>Marka CAFE 44 to przede wszystkim starannie wybierane ziarna kawy. Nasza kawa pokonuje długą i odległą podróż z wyselekcjonowanych plantacji Azji, Ameryki Południowej oraz Afryki. Naszym celem i ambicją jest dostarczenie w jak najkrótszym czasie świeżo palonej kawy wprost do filiżanek naszych klientów. Wypalamy w tradycyjnym piecu bębnowym; tylko najlepsze gatunkowo ziarna ze sprawdzonych plantacji; proces palenia trwa kilkanaście minut, a kawa chłodzona jest powietrzem. Stosujemy jasne i średnie palenie, które pozwala na zachowanie naturalnego smaku. Codzienne testy prowadzone przez naszego Master Roastera gwarantują najwyższą jakość każdego wyprodukowanego kilograma kawy i zachowanie odpowiedniego profilu palenia, aby nasza kawa zawsze smakowała tak samo.</p>
-                            </div>
+                            <p>Marka CAFE 44 to przede wszystkim starannie wybierane ziarna kawy. Nasza kawa pokonuje długą i odległą podróż z wyselekcjonowanych plantacji Azji, Ameryki Południowej oraz Afryki. Naszym celem i ambicją jest dostarczenie w jak najkrótszym czasie świeżo palonej kawy wprost do filiżanek naszych klientów. Wypalamy w tradycyjnym piecu bębnowym; tylko najlepsze gatunkowo ziarna ze sprawdzonych plantacji; proces palenia trwa kilkanaście minut, a kawa chłodzona jest powietrzem. Stosujemy jasne i średnie palenie, które pozwala na zachowanie naturalnego smaku. Codzienne testy prowadzone przez naszego Master Roastera gwarantują najwyższą jakość każdego wyprodukowanego kilograma kawy i zachowanie odpowiedniego profilu palenia, aby nasza kawa zawsze smakowała tak samo.</p>
                         </div>
                     </div>
                 </div>
@@ -79,8 +76,6 @@
                 </div>
             </div>
         </section>
-
-
         <section id="products">
             <div class="container">
                 <h2 class="text-center my-5">NASZE WSPANIAŁE, ŚWIEŻO PALONE KAWY!</h2>
@@ -90,7 +85,6 @@
                 </div>
             </div>
         </section>
-
         <section id="service">
             <div class="container">
                 <h2 class="text-center">NASZA PALARNIA KAW</h2>
@@ -102,12 +96,11 @@
                 </div>
             </div>
         </section>
-
         <footer id="page-footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <form action="sendemail.php" method="post" id="contact-form">
+                        <form action="send_email.php" method="post" id="contact-form">
                             <div id='recaptcha' class="g-recaptcha" data-sitekey="6Lf0KpgUAAAAAGVdKOvFmu9-mJuhsIUsaFbxwbTW" data-callback="onSubmit" data-size="invisible"></div>
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" id="nameInput" placeholder="Imię i nazwisko">
